--- a/onlinebank/package.json
+++ b/onlinebank/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "core-js": "^3.1.2",
+    "jsonwebtoken": "^8.5.1",
     "vue": "^2.6.10",
-    "vuetify": "^2.1.5"
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.1.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
