--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "apexcharts": "^3.10.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "mysql": "^2.17.1",
     "roboto-fontface": "*",
     "vue": "^2.5.2",
+    "vue-apexcharts": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuetify": "^2.1.0"
   },
